--- a/reset.css
+++ b/reset.css
@@ -19,6 +19,8 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
+	cursor: pointer;
+	font-size: 10em;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
